src/test/resources/semantic/sentences/error/TC_ERROR_RETURN_METHOD3.ru
/? ERROR: SEMANTICO - SENTENCIAS
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 15 | COLUMNA 13 | Se esperaba una variable de tipo void y se encontro una de tipo Int. |
struct A{
}

impl A{
    .(){
    }
    fn m1(Int num1)->void{
        Int a;
        if (true){
            ret;
        }else{
            ret a;
        }
    }
}
start{
}
